# Pixify

./: .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: application.h  engine.h  lifetime.h  startup.h
Engine/src/: application.cpp  main.cpp
Pixify/: CMakeLists.txt
Pixify/src/: main.cpp
code/: main.cpp
scripts/linux/: build.sh  clean.sh  exec.sh
scripts/windows/: build.bat  clean.bat  exec.bat
